index.css
body {
  margin: 0;
  padding: 0;
  display: flex;
  flex-direction: column;
}

#header {
  width: 100%;
}

.nav {
  background-color: hsla(22, 1%, 24%, 1);
  width: 100%;
  height: 72px;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
}

.name {
  margin-left: 25px;
  font-family: 'Roboto', sans-serif;
}

.pic {
  order: 1;
  margin-right: 18px;
}

h4 {
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 20px;
  line-height: 20px;
  color: hsla(0, 0%, 100%, 1);
}

.intro {
  background-color: hsla(22, 6%, 10%, 1);
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  padding: 10px 24px 100px 24px;
  height: 100vh;
  flex-wrap: wrap;
  position: relative;
}

.intro::after {
  content: '';
  position: absolute;
  right: 0;
  bottom: 0;
  width: 132px;
  height: 318px;
  background-image: url(Flags.png);
}

h1 {
  color: hsla(22, 100%, 48%, 1);
  font-family: 'Crete Round', serif;
  font-style: normal;
  font-weight: 400;
  font-size: 56px;
  line-height: 64px;
  letter-spacing: 0.37px;
  margin-bottom: 10px;
}

.subtitle {
  color: #fff;
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 24px;
  line-height: 44px;
  order: 1;
  margin-top: 0;
  margin-bottom: 0;
}

p {
  color: hsla(0, 0%, 100%, 1);
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 18px;
  line-height: 24px;
  order: 2;
}

.social {
  order: 3;
  background-color: hsla(22, 6%, 10%, 1);
}

.social ul {
  list-style-type: none;
  display: flex;
  padding: 0;
  align-items: center;
}

.social ul li {
  margin-right: 20px;
}

.Projects {
  display: grid;
  grid-template-columns: 1fr;
  background-color: white;
  padding: 0;
}

.Introduction {
  margin-top: 120px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.Introduction ul {
  list-style: none;
  padding: 24px;
}

h2 {
  font-family: 'Crete Round', serif;
  font-style: normal;
  font-weight: 400;
  font-size: 40px;
  line-height: 48px;
  letter-spacing: 0.37px;
  padding: 10px;
}

.line {
  border-bottom: 1px solid #212121;
  width: 332px;
}

.project1 {
  display: flex;
  flex-direction: column;
  padding: 24px;
}

h3 {
  font-family: 'Crete Round', serif;
  font-style: normal;
  font-weight: 400;
  font-size: 24px;
  line-height: 32px;
  letter-spacing: 0.37px;
  margin: 0;
  padding: 4px;
  color: hsla(218, 76%, 15%, 1);
}

.prodetail {
  color: hsla(218, 76%, 15%, 1);
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  margin: 0;
}

.blocks {
  order: 3;
}

.blocks ul {
  list-style: none;
  padding: 0;
  display: flex;
  flex-wrap: nowrap;
  justify-content: space-between;
}

.blocks ul li a {
  text-decoration: none;
  border: 1px solid hsla(218, 13%, 59%, 1);
  padding: 10px;
  color: hsla(218, 76%, 15%, 1);
  font-family: 'Inter', sans-serif;
  font-size: 15px;
}

.view {
  order: 4;
  display: flex;
  text-decoration: none;
  color: white;
  width: 124px;
  height: 48px;
  background-color: #ff6b00;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 17px;
  line-height: 24px;
  padding: 3px 12px;
  justify-content: center;
  align-items: center;
}

.pro2 {
  background: url(probg.png);
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  flex-direction: column;
  margin: 10px;
}

.pro2tit {
  padding: 180px 0 0 0;
  font-family: 'Crete Round', serif;
  font-style: normal;
  font-weight: 400;
  font-size: 32px;
  line-height: 44px;
  letter-spacing: 0.37px;
  color: #fff;
}

.pro2detail {
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  text-align: left;
  padding: 12px 16px 12px 16px;
}

.pro2bck {
  order: 5;
  width: 250px;
}

.pro2bck ul {
  list-style: none;
  padding: 0;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
}

.pro2bck ul li a {
  text-decoration: none;
  padding: 10px;
  color: #fff;
  font-family: 'Inter', sans-serif;
  font-size: 15px;
  background: rgba(255, 255, 255, 0.24);
}

.see {
  order: 6;
  display: flex;
  text-decoration: none;
  color: white;
  height: 48px;
  background-color: #ff6b00;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 700;
  font-size: 17px;
  line-height: 24px;
  padding: 3px 12px;
  justify-content: center;
  align-items: center;
}

#about {
  background-color: hsla(22, 6%, 10%, 1);
  display: grid;
}

.abtxt {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 10px 24px 50px 0;
  position: relative;
}

.abtxt::after {
  content: '';
  position: absolute;
  right: 0;
  bottom: 0;
  width: 132px;
  height: 318px;
  background-image: url(abtbg.png);
  background-repeat: no-repeat;
}

.abtxt h1 {
  padding: 120px 24px 24px 24px;
  font-family: 'Crete Round', serif;
  font-weight: 400;
  font-size: 60px;
  line-height: 78px;
  letter-spacing: 0.37px;
  margin: 0;
}

.abtxt p {
  padding: 0 24px 36px 24px;
  margin: 0;
  font-family: 'Inter', sans-serif;
  font-weight: 400;
  font-size: 16px;
  line-height: 24px;
  color: #f4f5f7;
}

.down {
  display: flex;
  text-decoration: none;
  color: #f4f5f7;
  height: 48px;
  background-color: #ff6b00;
  font-family: 'Inter', sans-serif;
  letter-spacing: 0.03rem;
  font-size: 17px;
  justify-content: center;
  align-items: center;
  padding: 3px 12px;
  width: fit-content;
  margin-left: 0;
  margin-top: 0;
  margin-right: 132px;
  margin-bottom: 0;
  order: 7;
}

.line2 {
  border-bottom: 1px solid hsla(0, 0%, 100%, 1);
  width: 322px;
  order: 7;
  padding: 200px 0 0 0;
}

.tech {
  display: flex;
  flex-direction: column;
  padding: 24px;
}

.lang {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  padding: 137px 86px 0 86px;
  width: 200px;
  height: 48px;
}

.ltxt {
  font-family: 'Roboto', sans-serif;
  font-weight: 500;
  font-size: 32px;
  line-height: 44px;
  color: hsla(0, 0%, 100%, 1);
  letter-spacing: 00.37px;
}

.rect {
  width: 18px;
  height: 18px;
  background: #ff6b00;
  transform: rotate(-45deg);
}

.skill {
  padding: 24px 100px;
}

.skill ul {
  list-style: none;
  padding: 0;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: center;
}

.skill ul h3 {
  padding: 10px;
  font-family: 'Inter', sans-serif;
  font-weight: 400;
  font-size: 22px;
  line-height: 43px;
  color: #f4f5f7;
}

.fram {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  padding: 100px 86px 0 86px;
  width: 200px;
  height: 48px;
}

.fram h6 {
  padding: 10px;
  font-family: 'Roboto', sans-serif;
  font-weight: 500;
  font-size: 32px;
  line-height: 44px;
  letter-spacing: 0.36px;
  color: #f4f5f7;
}

.square {
  width: 18px;
  height: 18px;
  background: #ff6b00;
}

.technology {
  padding: 24px 100px;
}

.technology ul {
  list-style: none;
  padding: 0;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: center;
}

.technology ul h3 {
  padding: 10px;
  font-family: 'Inter', sans-serif;
  font-weight: 400;
  font-size: 22px;
  line-height: 43px;
  color: #f4f5f7;
}

.tools {
  display: flex;
  flex-direction: row;
  justify-content: space-around;
  align-items: center;
  padding: 50px 86px 0 132px;
  width: 100px;
  height: 48px;
}

.tools h6 {
  padding: 10px;
  font-family: 'Roboto', sans-serif;
  font-weight: 700;
  font-size: 25px;
  line-height: 43px;
  color: #f4f5f7;
}

.circle {
  width: 18px;
  height: 18px;
  background: #ff6b00;
  border-radius: 150px;
}

.toolist {
  padding: 24px 100px;
}

.toolist ul {
  list-style: none;
  padding: 0;
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: center;
}

.toolist ul h3 {
  padding: 10px;
  font-family: 'Inter', sans-serif;
  font-weight: 400;
  font-size: 22px;
  line-height: 43px;
  color: #f4f5f7;
}

